--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   border-radius: 50%;
   position: relative;
   animation: rotate 1s linear infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .loader::before,
 .loader::after {
